# CFIE

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  MASTER_DEVELOPMENT_ROADMAP.md  README.md  TEST.txt  pyproject.toml
backend/: __init__.py
backend/cfie/: __init__.py
backend/cfie/api/: __init__.py
backend/cfie/chemistry/: __init__.py
backend/cfie/database/: __init__.py
backend/cfie/models/: __init__.py
backend/cfie/services/: __init__.py
backend/cfie/utils/: __init__.py
backend/core/: __init__.py
backend/core/chemistry/: __init__.py  acid_base.py  compound.py
backend/core/chemistry/foundation/: __init__.py  acid.py  base.py  equilibrium.py  species.py  (+1 more)
backend/core/constants/: __init__.py  unit_scales.py
backend/core/exceptions/: __init__.py  units.py
backend/core/formulation/: __init__.py  enums.py  formula.py  ingredient_entry.py  phase.py  serializer.py  validator.py
backend/core/math/: __init__.py  constants.py  exceptions.py  logarithms.py  powers.py  precision.py  validation.py
backend/core/quantities/: __init__.py  quantity.py
backend/core/units/: __init__.py  definitions.py
docs/: es-002-scientific-unit-quantity-engine.md  es-003-chemical-species-compound-data-model.md  es-004-scientific-mathematics-core.md  es-005-acid-base-foundation.md  es-007-polyprotic-acid-engine.md
docs/formulation/: fe-001.4-formula-version.md  formula-data-model.md
docs/requirements/: MVP.md  Requirements.md  Vision.md
tests/core/: test_acid_base_foundation.py  test_chemistry_models.py  test_math.py  test_polyprotic.py  test_quantities.py  test_units.py
(+5 files in other folders)
