[project]
name = "cfie"
version = "0.1.0"
description = "Cosmetic Formulation Intelligence Engine"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pyyaml>=6.0,<7.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13,<2.0",
    "pytest>=8.3,<9.0",
    "ruff>=0.8,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["data"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
files = ["backend"]
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
